[package]
name = "zestors-codegen"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proc macros for Zestors"
repository = "https://github.com/Zestors/zestors-codegen"
keywords = ["zestors", "actor", "actors", "actor-system", "macros"]
categories = ["asynchronous", "concurrency"]

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true